# pdf-qes-signer

./: .gitignore  LICENSE  README.md  pdf_signer.ini.example  pdf_signer.py  pyproject.toml  setup_pdf_signer.bat  setup_pdf_signer.sh  start_signer.sh
pdf_signer/: __init__.py  __main__.py  appearance.py  appearance_panel.py  config.py  continuous_view.py  dialogs.py  icons.py  lotl_trust.py  main.py  main_window.py  pdf_view.py  signer.py  validation_dialog.py  validation_extractor.py  validation_result.py  validation_worker.py
pdf_signer/i18n/: __init__.py  de.py  en.py
tests/: test_cert_chain_security.py
tools/: create_test_pdfs.py  generate_icons.py  show_cert_chain.py  sigcard_reader.py  test_lta_chain.py
